	PR c++/50618 	* init.c (expand_aggr_init_1): Don't zero-initialize virtual 	bases of a base subobject.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@179934 138bc75d-0d04-0410-961f-82ee72b054a4